--- a/part8/index.html
+++ b/part8/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <!-- this is where our elm app starts up -->
   <div id="elm-landing-pad"></div>
 </body>
 
@@ -19,7 +20,9 @@
   // documentation: https://github.com/michael/github
   var github = new Github();
 
-  var app = Elm.Main.embed(document.getElementById("elm-landing-pad"));
+  var elmlandingpad = document.getElementById("elm-landing-pad");
+
+  var app = Elm.Main.embed(elmlandingpad);
 
   function searchGithub(query) {
     console.log("Searching for", query);
@@ -27,11 +30,11 @@
     github.getSearch(query).repositories({}, function (err, repositories) {
       console.log("Got response", repositories);
 
-      // TODO: app.ports.portNameGoesHere.send(repositories);
+      app.ports.githubResponse.send(repositories);
     });
   }
 
-  // TODO app.ports.portNameGoesHere.subscribe(searchGithub);
+  app.ports.githubSearch.subscribe(searchGithub);
 </script>
 
 </html>
